--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 .app {
   padding: 10px;
+  background-color: #f2f2f2;
+  text-align: center;
 }
 
 form {
@@ -33,6 +35,7 @@ button {
   line-height: 1.5;
   border-radius: 0.25rem;
   cursor: pointer;
+  width: 40%;
 }
 
 .blog-post_display {
